--- a/templates/mjml_mail_templates/two_factor_auth_disabled_template.mjml
+++ b/templates/mjml_mail_templates/two_factor_auth_disabled_template.mjml
@@ -1,7 +1,7 @@
 <mjml>
   <mj-head>
     <mj-title>Two-Factor Authentication Disabled</mj-title>
-    <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" />
+    {% comment %} <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" /> {% endcomment %}
     <mj-attributes>
       <mj-all font-family="Roboto, Arial, sans-serif" />
       <mj-text font-size="16px" color="#000000" line-height="24px" />
