--- a/templates/mjml_mail_templates/two_factor_auth_disabled_template.mjml
+++ b/templates/mjml_mail_templates/two_factor_auth_disabled_template.mjml
@@ -1,7 +1,8 @@
 <mjml>
   <mj-head>
     <mj-title>Two-Factor Authentication Disabled</mj-title>
-    {% comment %} <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" /> {% endcomment %}
+    {% comment %}
+    <mj-font name="Roboto" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" /> {% endcomment %}
     <mj-attributes>
       <mj-all font-family="Roboto, Arial, sans-serif" />
       <mj-text font-size="16px" color="#000000" line-height="24px" />
@@ -23,7 +24,7 @@
     <!-- Header -->
     <mj-section padding="20px 0">
       <mj-column>
-        <mj-image width="200px" src="https://www.yourdomain.com/logo.png" alt="Logo" />
+        <mj-image width="200px" src="{{companyLogoUrl}}" alt="Logo" />
       </mj-column>
     </mj-section>
 
@@ -58,7 +59,7 @@
     <mj-section padding-top="20px" border-top="1px solid #eeeeee">
       <mj-column>
         <mj-text font-size="12px" color="#888888" align="center">
-          &copy; {{currentYear}} [Your Company Name]. All rights reserved.
+          &copy; {{currentYear}} {{companyName}}. All rights reserved.
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
@@ -66,7 +67,7 @@
           <a href="{{unsubscribeUrl}}" class="footer-link">Unsubscribe</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
-          [Your Company Address]
+          {{companyAddress}}
         </mj-text>
       </mj-column>
     </mj-section>
