--- a/templates/mjml_mail_templates/verify_email_template.mjml
+++ b/templates/mjml_mail_templates/verify_email_template.mjml
@@ -23,7 +23,7 @@
     <!-- Header -->
     <mj-section padding="20px 0">
       <mj-column>
-        <mj-image width="200px" src="https://www.yourdomain.com/logo.png" alt="Logo" />
+        <mj-image width="200px" src="{{companyLogoUrl}}" alt="Logo" />
       </mj-column>
     </mj-section>
 
@@ -61,7 +61,7 @@
     <mj-section padding-top="20px" border-top="1px solid #eeeeee">
       <mj-column>
         <mj-text font-size="12px" color="#888888" align="center">
-          &copy; {{currentYear}} [Your Company Name]. All rights reserved.
+          &copy; {{currentYear}} {{companyName}}. All rights reserved.
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
@@ -69,7 +69,7 @@
           <a href="{{unsubscribeUrl}}" class="footer-link">Unsubscribe</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
-          [Your Company Address]
+          {{companyAddress}}
         </mj-text>
       </mj-column>
     </mj-section>
