--- a/smtp/templates/html_mail_templates/verify_email_template.html
+++ b/smtp/templates/html_mail_templates/verify_email_template.html
@@ -170,7 +170,7 @@
                     <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                       <div
                         style="font-family:Roboto, Arial, sans-serif;font-size:16px;line-height:24px;text-align:left;color:#000000;">
-                        Hello {{name}},</div>
+                        Hello {{username}},</div>
                     </td>
                   </tr>
                   <tr>
