--- a/smtp/templates/mjml_mail_templates/magic_link_template.mjml
+++ b/smtp/templates/mjml_mail_templates/magic_link_template.mjml
@@ -21,16 +21,16 @@
   </mj-head>
   <mj-body background-color="#f0f0f0">
     <!-- Header -->
-    <mj-section padding="20px 0">
+    <mj-section padding="20px 0" padding-bottom="5px">
       <mj-column>
-        <mj-image width="200px" src="{{companyLogoUrl}}" alt="Logo" />
+        <mj-image src=../img/logo.png alt="Logo" />
       </mj-column>
     </mj-section>
 
     <!-- Content -->
     <mj-section>
       <mj-column>
-        <mj-text font-size="24px" font-weight="500" padding-bottom="20px">
+        <mj-text font-size="23px" font-weight="500" padding-bottom="20px">
           Your Magic Login Link
         </mj-text>
         <mj-text>
@@ -62,8 +62,7 @@
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
-          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a> |
-          <a href="{{unsubscribeUrl}}" class="footer-link">Unsubscribe</a>
+          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           {{companyAddress}}
