--- a/smtp/templates/mjml_mail_templates/new_device_login_template.mjml
+++ b/smtp/templates/mjml_mail_templates/new_device_login_template.mjml
@@ -21,20 +21,20 @@
   </mj-head>
   <mj-body background-color="#f0f0f0">
     <!-- Header -->
-    <mj-section padding="20px 0">
+    <mj-section padding="17px 0" padding-bottom="5px">
       <mj-column>
-        <mj-image width="200px" src="{{companyLogoUrl}}" alt="Logo" />
+        <mj-image src=../img/logo.png alt="Logo" />
       </mj-column>
     </mj-section>
 
     <!-- Content -->
     <mj-section>
       <mj-column>
-        <mj-text font-size="24px" font-weight="500" padding-bottom="20px">
+        <mj-text font-size="22px" font-weight="500" padding-bottom="20px">
           New Device Login Detected
         </mj-text>
         <mj-text>
-          Hello {{name}},
+          Hello {{username}},
         </mj-text>
         <mj-text padding-bottom="10px">
           We detected a new login to your account from a device we don't recognize.
@@ -77,8 +77,7 @@
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
-          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a> |
-          <a href="{{unsubscribeUrl}}" class="footer-link">Unsubscribe</a>
+          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           {{companyAddress}}
