--- a/smtp/templates/mjml_mail_templates/two_factor_auth_disabled_template.mjml
+++ b/smtp/templates/mjml_mail_templates/two_factor_auth_disabled_template.mjml
@@ -22,9 +22,9 @@
   </mj-head>
   <mj-body background-color="#f0f0f0">
     <!-- Header -->
-    <mj-section padding="20px 0">
+    <mj-section padding="18px 0">
       <mj-column>
-        <mj-image width="200px" src="{{companyLogoUrl}}" alt="Logo" />
+        <mj-image src=../img/logo.png alt="Logo" />
       </mj-column>
     </mj-section>
 
@@ -35,7 +35,7 @@
           Two-Factor Authentication Disabled
         </mj-text>
         <mj-text>
-          Hello {{name}},
+          Hello {{username}},
         </mj-text>
         <mj-text padding-bottom="10px">
           This email confirms that two-factor authentication has been disabled for your account.
@@ -63,8 +63,7 @@
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
-          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a> |
-          <a href="{{unsubscribeUrl}}" class="footer-link">Unsubscribe</a>
+          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           {{companyAddress}}
