--- a/smtp/templates/mjml_mail_templates/two_factor_auth_enabled_template.mjml
+++ b/smtp/templates/mjml_mail_templates/two_factor_auth_enabled_template.mjml
@@ -23,7 +23,7 @@
     <!-- Header -->
     <mj-section padding="20px 0">
       <mj-column>
-        <mj-image width="200px" src="{{companyLogoUrl}}" alt="Logo" />
+        <mj-image src=../img/logo.png alt="Logo" />
       </mj-column>
     </mj-section>
 
@@ -34,7 +34,7 @@
           Two-Factor Authentication Enabled
         </mj-text>
         <mj-text>
-          Hello {{name}},
+          Hello {{username}},
         </mj-text>
         <mj-text padding-bottom="10px">
           This email confirms that two-factor authentication has been successfully enabled for your account.
@@ -45,10 +45,13 @@
         <mj-text padding-bottom="20px">
           Here's what to remember:
         </mj-text>
-        <mj-text font-size="14px" color="#666666" padding-left="20px" padding-bottom="20px">
-          • Keep your authentication app secure<br />
-          • Save your backup codes in a safe place<br />
-          • If you lose access to your verification method, you'll need your backup codes to log in<br />
+        <mj-text font-size="17px" color="#666666" padding-left="20px" padding-bottom="20px">
+          <ul>
+
+            <li>Keep your authentication app secure</li>
+            <li>Save your backup codes in a safe place</li>
+            <li>If you lose access to your verification method, you'll need your backup codes to log in</li>
+          </ul>
         </mj-text>
         <mj-button background-color="#4A90E2" color="white" font-weight="500" border-radius="4px" href="{{securitySettingsLink}}">
           Manage Security Settings
@@ -67,8 +70,7 @@
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
-          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a> |
-          <a href="{{unsubscribeUrl}}" class="footer-link">Unsubscribe</a>
+          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           {{companyAddress}}
