--- a/smtp/templates/mjml_mail_templates/TOTP_code_template.mjml
+++ b/smtp/templates/mjml_mail_templates/TOTP_code_template.mjml
@@ -32,7 +32,7 @@
     <!-- Header -->
     <mj-section padding="20px 0">
       <mj-column>
-        <mj-image src=../img/logo.png alt="Logo" />
+        <mj-image src={{companyLogoUrl}} alt="Logo" />
       </mj-column>
     </mj-section>
 
@@ -58,7 +58,7 @@
         <mj-text padding-bottom="20px">
           If you did not request this code, please secure your account immediately as someone may be attempting to access it.
         </mj-text>
-        <mj-button background-color="#D32F2F" color="white" font-weight="500" border-radius="4px" href="{{securityPageLink}}">
+        <mj-button background-color="#D32F2F" color="white" font-weight="500" border-radius="4px" href={{securityPageLink}}>
           Secure Your Account
         </mj-button>
         <mj-text font-size="14px" color="#666666" padding-top="20px">
@@ -74,8 +74,8 @@
           &copy; {{currentYear}} {{companyName}}. All rights reserved.
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
-          <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
-          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a>
+          <a href={{termsUrl}} class="footer-link">Terms of Service</a> |
+          <a href={{privacyUrl}} class="footer-link">Privacy Policy</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           {{companyAddress}}
