--- a/smtp/templates/mjml_mail_templates/new_device_login_template.mjml
+++ b/smtp/templates/mjml_mail_templates/new_device_login_template.mjml
@@ -23,7 +23,7 @@
     <!-- Header -->
     <mj-section padding="17px 0" padding-bottom="5px">
       <mj-column>
-        <mj-image src=../img/logo.png alt="Logo" />
+        <mj-image src={{companyLogoUrl}} alt="Logo" />
       </mj-column>
     </mj-section>
 
@@ -60,7 +60,7 @@
         <mj-text padding-bottom="20px">
           If this was you, you can ignore this message. If you don't recognize this activity, please secure your account immediately:
         </mj-text>
-        <mj-button background-color="#D32F2F" color="white" font-weight="500" border-radius="4px" href="{{securityPageLink}}">
+        <mj-button background-color="#D32F2F" color="white" font-weight="500" border-radius="4px" href={{securityPageLink}}>
           Secure Your Account
         </mj-button>
         <mj-text font-size="14px" color="#666666" padding-top="20px">
@@ -76,8 +76,8 @@
           &copy; {{currentYear}} {{companyName}}. All rights reserved.
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
-          <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
-          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a>
+          <a href={{termsUrl}} class="footer-link">Terms of Service</a> |
+          <a href={{privacyUrl}} class="footer-link">Privacy Policy</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           {{companyAddress}}
