--- a/smtp/templates/mjml_mail_templates/password_changed_template.mjml
+++ b/smtp/templates/mjml_mail_templates/password_changed_template.mjml
@@ -23,7 +23,7 @@
     <!-- Header -->
     <mj-section padding="20px 0">
       <mj-column>
-        <mj-image src=../img/logo.png alt="Logo" />
+        <mj-image src={{companyLogoUrl}} alt="Logo" />
       </mj-column>
     </mj-section>
 
@@ -56,7 +56,7 @@
         <mj-text padding-bottom="20px">
           If you made this change, no further action is required. If you did not change your password, someone may have access to your account.
         </mj-text>
-        <mj-button background-color="#D32F2F" color="white" font-weight="500" border-radius="4px" href="{{passwordResetLink}}">
+        <mj-button background-color="#D32F2F" color="white" font-weight="500" border-radius="4px" href={{passwordResetLink}}>
           Reset Your Password
         </mj-button>
         <mj-text font-size="14px" color="#666666" padding-top="20px">
@@ -72,8 +72,8 @@
           &copy; {{currentYear}} {{companyName}}. All rights reserved.
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
-          <a href="{{termsUrl}}" class="footer-link">Terms of Service</a> |
-          <a href="{{privacyUrl}}" class="footer-link">Privacy Policy</a>
+          <a href={{termsUrl}} class="footer-link">Terms of Service</a> |
+          <a href={{privacyUrl}} class="footer-link">Privacy Policy</a>
         </mj-text>
         <mj-text font-size="12px" color="#888888" align="center" padding-top="10px">
           {{companyAddress}}
